fixed the icon on header now the sidebar and filter rows are out of place. need a fix. added forms (they are hidden)

--- a/Website/scss/style.scss
+++ b/Website/scss/style.scss
@@ -8,7 +8,7 @@
 /* 05 - SIDEBAR STYLES */
 /* 06 - CONTENT STYLES */
 /* 07 - SEARCH */
-/* 08- JS IDs */
+/* 08- FORMS */
 
 
 
@@ -82,7 +82,7 @@ a:hover {
 @media (max-width: 500px) {
   .wrapper {
     grid-template-columns: 1fr 2fr;
-    //grid-template-rows: 1fr 0fr 3fr 1fr;
+    
     grid-template-areas:
       "header  header"
       "filter-bar filter-bar"
@@ -92,12 +92,18 @@ a:hover {
       "sidebar content"
       "search  search";
   }
+h5{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-size: 10px;
+    margin: 0;
+  }
 
 }
 /*Tablet*/
 @media (min-width: 501px) {
   .wrapper {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 3fr;
     grid-template-areas:
       "header  header"
       "filter-bar filter-bar"
@@ -130,12 +136,14 @@ a:hover {
 .main-head{
   background-color: #FCB284;
   padding: 20px;
-  display: block;
+  display: inline-block;
+  position: absolute;
   width: 100%;
   border-bottom: 20px solid #3E8D50;
 }
 .logo{
-  display:inline;
+  display:inline-block;
+
 
 }
 .avatar{
@@ -148,6 +156,7 @@ a:hover {
 
 .name-header{
   display:inline-block;
+  position: relative;
   text-align:right;
   float: right;
   height: 15px;
@@ -160,11 +169,15 @@ a:hover {
 .side{
   background-color: #E0DAD6;
   height: 100%;
+  display: inline-block;
+
+
 
 }
 
 .filter-bar{
   background-color: #F0EFEF;
+
 }
 .filter-gear{
   display: inline-block;
@@ -188,7 +201,7 @@ a:hover {
   width: 250px;
   text-align: left;
   background-color: #FCB284;
-  margin: 5px 5px;
+  // margin: 5px 5px;
   padding: 20px;
 
 }
@@ -203,27 +216,14 @@ a:hover {
   width: 20px;
   margin-left: 60px;
 }
-.filters-form{
-  display:inline-block;
-  position: relative;
-  text-align: center;
 
-}
-.fill-in{
-  display: inline-block;
-  border-radius: 15px;
-  background-color: white;
-  margin-left: 30px;
-
-  width: 200px;
-  height: 30px;
-
-
-}
 /* 06-CONTENT STYLES*/
 
 .content{
   background-color: #F7F7F7;
+  display: fixed;
+
+
 }
 .modal{
   display: inline-block;
@@ -238,12 +238,63 @@ a:hover {
 /* 07-SEARCH BAR*/
 .search{
   background-color: #FFFFFF;
+  box-shadow: 5px;
   font: 20px, #95989A;
   text-align: center;
-  position: absolute;
+  position: fixed;
   display: inline-block;
   border: none;
   width: 100%;
   bottom: 2px;
 
+}
+
+/* 08-FORMS*/
+
+form{
+  padding:10px;
+  display:none;
+
+}
+
+
+
+
+b{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: lighter;
+  font-size: 10px;
+  text-align: center;
+  margin-bottom: 15px;
+    margin-top: 15px;
+
+}
+.coursefilters{
+  margin: 0px 0px 0px 25px;
+}
+
+
+.text-form1{
+  border-radius: 20px;
+  margin-left: 10px;
+  border: 5px;
+  width: 90%;
+  height: 25px;
+  box-shadow: 2px;
+}
+.text-form2{
+  border-radius: 20px;
+  margin-left: 10px;
+  border: 5px;
+  width: 40%;
+  height: 25px;
+  box-shadow: 2px;
+}
+.text-form3{
+  border-radius: 20px;
+  margin-left: 30px;
+  border: 5px;
+  width: 40%;
+  height: 25px;
+  box-shadow: 2px;
 }
